[package]
name = "box_derive_app"
version = "0.1.0"
authors = ["Greg Cooper <gregory.cooper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.9.0"
command_macro = { path = "../command_macro" }
command_macro_derive = { path = "../command_macro/command_macro_derive" }
